--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "probot": "^12.2.4"
+    "probot": "^12.2.4",
+    "semver": "^7.3.7"
   },
   "devDependencies": {
+    "@vercel/ncc": "^0.34.0",
     "jest": "^28.0.0",
     "nock": "^13.0.5",
     "nodemon": "^2.0.18",
