--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0",
+    "eslint": "^8.19.0",
     "jest": "^28.0.0",
     "nock": "^13.0.5",
     "nodemon": "^2.0.18",
